try and fix issue with scrollbar

--- a/client/content/site.less
+++ b/client/content/site.less
@@ -3,18 +3,14 @@
  * Base structure
  */
 
- .container-fluid {
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+.container-fluid {
+overflow-x: hidden !important;
 }
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
   padding-top: 50px;
 }
-
 
 /*
  * Global add-ons
